test/classes/initializers/records/declaration.good
declaration.chpl:12: error: unresolved call 'Foo.init()'
declaration.chpl:6: note: candidates are: Foo.init(xVal)
deleted module lines
